compare/fe0fb8fec7659d3399f72dc1ba765c30
  File "uploaded/a7f5f35426b927411fc9231b56382173/f970e2767d0cfe75876ea857f92e319b", line 1
    as
     ^
SyntaxError: invalid syntax
